tests/unit/default/syntax-error/039-create-table-parens-name-colon-type-params-null-eq-true.e.t
---- IN ----
+%table(id:decimal(10,2)?=true
---- OUT ----
---- ERR ----
syntax: expected `)` after `...:decimal(10,2)?=true` instead of EOL at position 30 - at line 1
---- EXIT ----
1
